2006-01-31  Kanru Chen  <koster@debian.org.tw>

	* configure.ac: Export @LIBTOOL_EXPORT_OPTIONS@ macro, though whether it
	is useful has to be discussed.

2006-01-31  Kanru Chen  <koster@debian.org.tw>

	* configure.ac: Use AC_CHECK_FT2 to check and setup freetype2 library
	including path.

2006-01-23  Jim Huang  <jserv@kaffe.org>

	* src/view/telnetcon.cpp
	(CTelnetCon::ConnectAsync): Disable the Nagle (TCP No Delay)
	algorithm. Nagle algorithm works well to minimize small packets by
	concatenating them into larger ones. However, for telnet application,
	the experience would be less than desirable if the user were required
	to fill a segment with typed characters before the packet was sent.
	(CTelnetCon::IsUnicolor): Clean up.
	
2005-12-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.h,
	src/mainframe.cpp: start to rebuild UI using GtkUIManager.

2005-12-19  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Use AS_HELP_STRING with AC_ARG_ENABLE for better
	expression.

2005-12-15  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/sitelistdlg.cpp
	(CSiteListDlg::LoadSiteList): Fix some problem with icons of treeview.

2005-12-11  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp,
	src/view/telnetview.h,
	configure.ac: --disable-mouse for compiling without Mouse Support.
	
2005-12-11  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp: coordinate with maple bbs for Mouse Support.

2005-12-08  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h,
	src/view/telnetview.cpp,
	src/view/telnetview.h: add Mouse Wheel Scrolling Support for menu and list.

	* src/mainframe.cpp: add myself as developer in About Dialog.

	* TODO: update
	
2005-12-05  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.cpp: CMainFrame::OnNotebookPopupMenu, added "Add to
	Favorites" item.

	* po/pcmanx.pot,
	po/zh_TW.po,